<resources>
    <string name="app_name">caps_example2</string>

    <!-- 회원가입정보 -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="phone">휴대폰 번호</string>
    <string name="signup">회원가입</string>
    <string name="newstext">Click하시면 해당 뉴스로 이동합니다!</string>

    <!-- 로그인 -->
    <string name="signin">로그인</string>
    <string name="email_login">이메일로 로그인 하기</string>
    <string name="google_login">구글 계정으로 로그인 하기</string>
    <string name="facebook_login">페이스북 계정으로 로그인 하기</string>

    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newshead">동물 뉴스</string>
    <string name="boardhead">게시판</string>
    <string name="content">내용</string>
    <string name="title">제목</string>
    <string name="board_btn">board_btn</string>
    <string name="register">등록</string>
    <string name="boardline">게시글 목록</string>
</resources>
