<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoardActivity"
    android:background="#e9ecef">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:text="@string/boardhead"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorIndigo"/>
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/board_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/title"
                    android:maxLength="20" />

                <Button
                    android:id="@+id/board_btn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/register"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:contentDescription="@string/board_btn" />
            </RelativeLayout>
            <EditText
                android:id="@+id/board_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/content"
                android:lines="5" />
        </LinearLayout>
        <TextView
            android:id="@+id/textView_boardline"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/boardline"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/cardview_dark_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recycler_view_board"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
