<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearlayout_board"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/board_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/board_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:text="@string/name"
            android:linksClickable="true"
            android:autoLink="web"
            android:textColorLink="@color/colorIndigo"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/board_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:text="@string/content"
            android:linksClickable="true"
            android:autoLink="web"
            android:textColorLink="@color/colorIndigo"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>